@@ -363,9 +363,6 @@ MAIN GOAL for 0.6.0:
 	     i.e. overlays must be used if reverse execution support is
 	     enabled.
 
-  [ ] Move the description of the new framework to a separate html page,
-  	framework.html! ("Description of the GXemul framework")
-
   [ ] Serialize symbols
 
   [ ] Serialize breakpoints
