@@ -60,6 +60,10 @@ SUCH DAMAGE.
 
   <p>
 
+  <li><a href="framework.html">Description of the framework</a>
+	<!-- TODO: Sub chapters go here -->
+  <p>
+
   <li><a href="machines.html">Machines</a> <small>(new framework)</small>
 
   <p>
